--- a/netishr/recruitmentplanning.html
+++ b/netishr/recruitmentplanning.html
@@ -395,6 +395,9 @@
                                                     <table class="table table-striped table-hover">
                                                         <thead>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -418,6 +421,7 @@
                                                         </thead>
                                                         <tbody>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
 
                                                                 <td> 15/11/2016</td>
@@ -437,6 +441,7 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -455,6 +460,7 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -473,6 +479,7 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -491,6 +498,7 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -519,6 +527,9 @@
                                                     <table class="table table-striped table-hover">
                                                         <thead>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -539,6 +550,7 @@
                                                         </thead>
                                                         <tbody>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -547,6 +559,7 @@
                                                                 <td> 20</td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -555,6 +568,7 @@
                                                                 <td> 20</td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -563,6 +577,7 @@
                                                                 <td> 20</td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
@@ -571,6 +586,7 @@
                                                                 <td> 20</td>
                                                             </tr>
                                                             <tr>
+                                                                <td> X01</td>
                                                                 <td> Marketing Staff</td>
                                                                 <td> 15/11/2016</td>
                                                                 <td> 15/12/2016</td>
