--- a/netishr/selectionprocess.html
+++ b/netishr/selectionprocess.html
@@ -404,6 +404,9 @@
                                                                 Applicant Name
                                                             </th>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -417,6 +420,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -436,6 +440,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -455,6 +460,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -488,6 +494,10 @@
                                                                 Applicant Name
                                                             </th>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -501,6 +511,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -520,6 +531,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -539,6 +551,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -572,6 +585,10 @@
                                                                 Applicant Name
                                                             </th>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -585,6 +602,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -604,6 +622,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -623,6 +642,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -656,6 +676,10 @@
                                                                 Applicant Name
                                                             </th>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -669,6 +693,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -688,6 +713,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -739,6 +765,10 @@
                                                             <th>
                                                                 Applicant Name
                                                             </th>
+                                                            <th>
+                                                                Recruitment ID
+                                                            </th>
+
                                                             <th>
                                                                 Job Title
                                                             </th>
@@ -824,6 +854,10 @@
                                                                 Applicant Name
                                                             </th>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -907,6 +941,10 @@
                                                             <th>
                                                                 Applicant Name
                                                             </th>
+                                                            <th>
+                                                                Recruitment ID
+                                                            </th>
+
                                                             <th>
                                                                 Job Title
                                                             </th>
@@ -992,6 +1030,10 @@
                                                                 Applicant Name
                                                             </th>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -1058,6 +1100,10 @@
                                                                 Applicant Name
                                                             </th>
                                                             <th>
+                                                                Recruitment ID
+                                                            </th>
+
+                                                            <th>
                                                                 Job Title
                                                             </th>
                                                             <th>
@@ -1071,6 +1117,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -1087,6 +1134,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -1103,6 +1151,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
