--- a/netishr/x-editable.html
+++ b/netishr/x-editable.html
@@ -236,7 +236,7 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
                         <li>
-                            <span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span>
+                            <span class="m-r-sm text-muted welcome-message">Welcome to NetisHR</span>
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -454,10 +454,10 @@
             </div>
             <div class="footer">
                 <div class="pull-right">
-                    10GB of <strong>250GB</strong> Free.
+                    <strong>Version</strong> 2.x.xxxx.
                 </div>
                 <div>
-                    <strong>Copyright</strong> Example Company &copy; 2014-2017
+                    <strong>Copyright</strong> Netika Indonesia &copy; 2016
                 </div>
             </div>
 
