Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -1,4 +1,4 @@
-﻿<!--
+<!--
 *
 *  INSPINIA - Responsive Admin Theme
 *  version 2.6.2
@@ -499,9 +499,17 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Category
-                                        <br> Institution
-                                        <br> Instructor
+                                        <div><a href="#">Category</a>
+                                            <div class="small">Settings for categories</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="#">Institution</a>
+                                            <div class="small">Settings for institutions</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="#">Instructor</a>
+                                            <div class="small">Settings for instructors</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -514,7 +522,10 @@
                                         <div><a href="administrator_career_settings.html">Settings</a>
                                             <div class="small">Various settings for Performance</div>
                                         </div>
-                                        Policy Setting
+                                        <p></p>
+                                        <div><a href="#">Policy Setting</a>
+                                            <div class="small">Settings for policy</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -560,10 +571,16 @@
                                     <div class="ibox-content">
                                         <div>
                                             <a href="administrator_shift_settings.html">Settings</a>
-                                            <div class="small">Various settings for Shift</div>
+                                            <div class="small">Various settings for shift</div>
                                         </div>
-                                        Personnel Administration
-                                        <br> Work Shift
+                                        <p></p>
+                                        <div><a href="#">Personnel Administration</a>
+                                            <div class="small">Settings for policy</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="#">Work Shift</a>
+                                            <div class="small">Settings for policy</div>
+                                        </div>
                                     </div>
                                 </div>
 
