Updated NetisHR files

--- a/netishr/workloadanalysis_pic.html
+++ b/netishr/workloadanalysis_pic.html
@@ -397,80 +397,65 @@
 
                 </div>
             </div>
-            <div class="wrapper wrapper-content animated fadeInRight">
+            <!--<div class="wrapper wrapper-content animated fadeInRight">-->
+            <div class="row">
+                <div class="ibox">
+                    <div class="ibox-content">
 
-
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="ibox">
-                            <div class="ibox-content">
-
-                                <div class="form-group">
-                                    <!-- Initially select first staff -->
-                                    <div>
-                                        <label class="control-label" for="status">Select a person-in-charge: </label>
-                                        <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
-                                            <option value="1">DIR-BR Director of Business Development - Tono Kartono</option>
-                                            <option selected value="2">DIR-FIN Director of Finance - Jono Karjono</option>
-                                            <option value="3">DIR-HR Director of HR - Sono Karsono</option>
-                                        </select>
-                                    </div>
-                                </div>
+                        <div class="form-group">
+                            <!-- Initially select first staff -->
+                            <div>
+                                <label class="control-label" for="status">Select a person-in-charge: </label>
+                                <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
+                                    <option value="1">DIR-BR Director of Business Development - Tono Kartono</option>
+                                    <option selected value="2">DIR-FIN Director of Finance - Jono Karjono</option>
+                                    <option value="3">DIR-HR Director of HR - Sono Karsono</option>
+                                </select>
                             </div>
                         </div>
-                    </div>
-                </div>
 
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="ibox">
-                            <div class="ibox-content">
-                                <p>
-                                    Select one or more job titles whose workload analysis is to be done by the person selected above.
-                                </p>
-                                <p>
+
+                        <p>
+                            Select one or more job titles whose workload analysis is to be done by the person selected above.
+                        </p>
+                        <p>
 
 
-                                    <input type="checkbox" class="js-switch" checked />&nbsp;Show direct subordinates only
-                                </p>
+                            <input type="checkbox" class="js-switch" checked />&nbsp;Show direct subordinates only
+                        </p>
 
-                                <form id="form" action="#" class="wizard-big">
-                                    <select class="form-control dual_select" multiple>
-                                        <option value="1">Jobtitle1</option>
-                                        <option value="2">Jobtitle2</option>
-                                        <option value="3">Jobtitle3</option>
-                                        <option selected value="4">Jobtitle4</option>
-                                        <option selected value="5">Jobtitle5</option>
-                                        <option value="6">Jobtitle6</option>
-                                        <option value="7">Jobtitle7</option>
-                                        <option value="8">Jobtitle8</option>
-                                        <option value="9">Jobtitle9</option>
-                                        <option value="10">Jobtitle110</option>
-                                        <option value="11">Jobtitle11</option>
-                                        <option value="12">Jobtitle12</option>
-                                    </select>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                        <form id="form" action="#" class="wizard-big">
+                            <select class="form-control dual_select" multiple>
+                                <option value="1">Jobtitle1</option>
+                                <option value="2">Jobtitle2</option>
+                                <option value="3">Jobtitle3</option>
+                                <option selected value="4">Jobtitle4</option>
+                                <option selected value="5">Jobtitle5</option>
+                                <option value="6">Jobtitle6</option>
+                                <option value="7">Jobtitle7</option>
+                                <option value="8">Jobtitle8</option>
+                                <option value="9">Jobtitle9</option>
+                                <option value="10">Jobtitle110</option>
+                                <option value="11">Jobtitle11</option>
+                                <option value="12">Jobtitle12</option>
+                            </select>
+                        </form>
 
-                </div>
-                <div class="row">
-
-                    <div class="col-lg-12">
-                        <div class="ibox float-e-margins">
-                            <div class="ibox-title  back-change">
-                                <div>
-                                    <button class="btn btn-white btn-xs" type="submit">Cancel</button>
-                                    <button class="btn btn-primary btn-xs" type="submit">Save changes</button>
-                                </div>
+                        <div class="form-group">
+                            <div>
+                                <p></p>
+                                <button class="btn btn-white" type="submit">Cancel</button>
+                                <button class="btn btn-primary" type="submit">Save changes</button>
                             </div>
                         </div>
 
                     </div>
+
                 </div>
+
             </div>
+            <!--</div>-->
             <div class="footer">
                 <div class="pull-right">
                     <strong>Version</strong> 2.x.xxxx.
