Updated NetisHR files

--- a/netishr/competency_dictionary.html
+++ b/netishr/competency_dictionary.html
@@ -384,23 +384,12 @@
 
                         </div>
                     </div>
-
                     <div class="row">
-                        <!--
-                            <div class="alert alert-success">
-                                <strong>Success!</strong> Indicates a successful or positive action.
-                            </div>
-                            -->
-
-                        <!--<div class="col-sm-12">-->
-
-                        <div class="ibox">
-                            <div class="ibox-content m-b-sm border-bottom">
-                                <a href="competency_dictionary_new.html" class="btn-primary btn-xs">New Competency</a>
-                            </div>
-                        </div>
 
                         <div class="tabs-container">
+                            <div class="ibox">
+                                <div class="ibox-content"><a href="competency_dictionary_new.html" class="btn-primary btn-xs">New Competency</a></div>
+                            </div>
                             <div class="tabs-left">
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a data-toggle="tab" href="#tab-1">Core</a></li>
@@ -1234,7 +1223,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!--</div>-->
+
                         <div class="modal fade" id="modal_mf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
