--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -365,12 +365,8 @@
                         </li>
                     </ol>
                 </div>
-                <div class="col-lg-2">
-
-                </div>
             </div>
-
-            <div class="wrapper wrapper-content animated fadeInRight ecommerce">
+            <div class="row">
                 <div class="ibox-title">
                     <h5>Show KPIs</h5>
                     <div class="ibox-tools">
@@ -388,8 +384,6 @@
                         </ul>
                     </div>
                 </div>
-
-
                 <div class="ibox-content m-b-sm border-bottom">
                     <div class="row">
                         <div class="col-sm-2">
@@ -706,7 +700,6 @@
                         <strong>Copyright</strong> Netika Indonesia &copy; 2016
                     </div>
                 </div>
-
             </div>
         </div>
 
