--- a/netishr/Administrator_group_competency.html
+++ b/netishr/Administrator_group_competency.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>NetisHR | Group Competency Settings</title>
+    <title>NetisHR | Competency Group Settings</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -355,7 +355,7 @@
             </div>
             <div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-lg-10">
-                    <h2>Job Levels/Sub-levels</h2>
+                    <h2>Group Competency Settings</h2>
                     <ol class="breadcrumb">
                         <li>
                             <a href="index.html">Home</a>
@@ -373,131 +373,134 @@
                 </div>
             </div>
 
-
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="wrapper wrapper-content animated fadeInRight ecommerce">
 
+                <div class="ibox float-e-margins">
 
-                        <div class="ibox-content m-b-sm border-bottom">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="ibox">
-                                        <div class="ibox-content">
+                    <div class="ibox-title">
+                        <h5>Competency Group</h5>
+                        <div class="ibox-tools">
+                            <a class="collapse-link">
+                                <i class="fa fa-chevron-up"></i>
+                            </a>
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                <i class="fa fa-wrench"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-user">
+                                <li><a href="#">Config option 1</a>
+                                </li>
+                                <li><a href="#">Config option 2</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
-                                            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newGroupCompetency">New Group Competency</button>
-                                            <!-- Modal -->
-                                            <div class="modal inmodal" id="newGroupCompetency" tabindex="-1" role="dialog" aria-hidden="true">
-                                                <div class="modal-dialog">
-                                                    <div class="modal-content animated bounceInRight">
-                                                        <div class="modal-header">
-                                                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                            <i class="fa fa-users modal-icon"></i>
-                                                            <h4 class="modal-title">Input Group Competency</h4>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <div class="row">
-                                                                <div>
-                                                                    <div class="form-group">
-                                                                        <label class="control-label pull-left">Group Competency</label>
-                                                                        <input type="text" class="form-control pull-right" />
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                            <button type="button" class="btn btn-primary showtoast" data-dismiss="modal">Save changes</button>
-                                                        </div>
-                                                    </div>
+                    <div class="ibox-content">
+
+                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newGroupCompetency">New Competency Group</button>
+                        <!-- Modal -->
+                        <div class="modal inmodal" id="newGroupCompetency" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content animated bounceInRight">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                        <i class="fa fa-users modal-icon"></i>
+                                        <h4 class="modal-title">Input Competency Group</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="row">
+                                            <div>
+                                                <div class="form-group">
+                                                    <label class="control-label pull-left">Competency Group</label>
+                                                    <input type="text" class="form-control pull-right" />
                                                 </div>
                                             </div>
-
-                                            <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Group Competency</th>
-                                                        <th>Last update</th>
-                                                        <th class="text-right"></th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <td>
-                                                        Core
-                                                    </td>
-                                                    <td>
-                                                        03/04/2015
-                                                    </td>
-                                                    <td class="text-right">
-                                                        <div class="btn-group">
-                                                            <button class="btn-white btn btn-xs">Edit</button>
-                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                        </div>
-                                                    </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>
-                                                            Role
-                                                        </td>
-                                                        <td>
-                                                            03/04/2015
-                                                        </td>
-                                                        <td class="text-right">
-                                                            <div class="btn-group">
-                                                                <button class="btn-white btn btn-xs">Edit</button>
-                                                                <button class="btn-white btn btn-xs">Delete</button>
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>
-                                                            Job Specific(behaviour)
-                                                        </td>
-                                                        <td>
-                                                            03/04/2015
-                                                        </td>
-                                                        <td class="text-right">
-                                                            <div class="btn-group">
-                                                                <button class="btn-white btn btn-xs">Edit</button>
-                                                                <button class="btn-white btn btn-xs">Delete</button>
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>
-                                                            Job Specific(Technical)
-                                                        </td>
-                                                        <td>
-                                                            03/04/2015
-                                                        </td>
-                                                        <td class="text-right">
-                                                            <div class="btn-group">
-                                                                <button class="btn-white btn btn-xs">Edit</button>
-                                                                <button class="btn-white btn btn-xs">Delete</button>
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                                <tfoot>
-                                                    <tr>
-                                                        <td colspan="7">
-                                                            <ul class="pagination pull-right"></ul>
-                                                        </td>
-                                                    </tr>
-                                                </tfoot>
-                                            </table>
-
                                         </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary showtoast" data-dismiss="modal">Save changes</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
+                        <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+                            <thead>
+                                <tr>
+                                    <th>Group Competency</th>
+                                    <th>Last update</th>
+                                    <th class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <td>
+                                    Core
+                                </td>
+                                <td>
+                                    03/04/2015
+                                </td>
+                                <td class="text-right">
+                                    <div class="btn-group">
+                                        <button class="btn-white btn btn-xs">Edit</button>
+                                        <button class="btn-white btn btn-xs">Delete</button>
+                                    </div>
+                                </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Role
+                                    </td>
+                                    <td>
+                                        03/04/2015
+                                    </td>
+                                    <td class="text-right">
+                                        <div class="btn-group">
+                                            <button class="btn-white btn btn-xs">Edit</button>
+                                            <button class="btn-white btn btn-xs">Delete</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Job Specific(behaviour)
+                                    </td>
+                                    <td>
+                                        03/04/2015
+                                    </td>
+                                    <td class="text-right">
+                                        <div class="btn-group">
+                                            <button class="btn-white btn btn-xs">Edit</button>
+                                            <button class="btn-white btn btn-xs">Delete</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Job Specific(Technical)
+                                    </td>
+                                    <td>
+                                        03/04/2015
+                                    </td>
+                                    <td class="text-right">
+                                        <div class="btn-group">
+                                            <button class="btn-white btn btn-xs">Edit</button>
+                                            <button class="btn-white btn btn-xs">Delete</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="7">
+                                        <ul class="pagination pull-right"></ul>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
 
                     </div>
-
                 </div>
-
 
 
 
