--- a/netishr/payroll_payassignment.html
+++ b/netishr/payroll_payassignment.html
@@ -388,119 +388,126 @@
 
                         </div>
                     </div>
-
-                    <div class="wrapper wrapper-content">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="ibox float-e-margins">
-                                    <div class="ibox-content m-b-sm border-bottom">
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <div class="form-group">
-                                                    <!-- Initially select first staff -->
-                                                    <div>
-                                                        <label class="control-label" for="status">Select a person: </label>
-                                                        <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
-                                                            <option value="1">Jono Hartono (Director of Business Development)</option>
-                                                            <option selected value="2">Tono Kartono (Director of Finance)</option>
-                                                            <option value="3">Sono Suryono (Director of HR)</option>
-                                                        </select>
-                                                    </div>
-
-
-                                                </div>
+                    <div class="row">
+                        <div class="ibox float-e-margins">
+                            <div class="ibox-content m-b-sm border-bottom">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <!-- Initially select first staff -->
+                                            <div>
+                                                <label class="control-label" for="status">Select a person: </label>
+                                                <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
+                                                    <option value="1">Jono Hartono (Director of Business Development)</option>
+                                                    <option selected value="2">Tono Kartono (Director of Finance)</option>
+                                                    <option value="3">Sono Suryono (Director of HR)</option>
+                                                </select>
                                             </div>
+
+
                                         </div>
-                                        <div class="hr-line-dashed"></div>
-                                        <div class="row">
-                                            <div class="col-sm-8">
-                                                <div class="form-group">
-                                                    <!-- Initially select first competency in first category -->
-                                                    <label class="control-label" for="status">Select a payset:</label>&nbsp;&nbsp;<a href="payroll_payitems.html" class="btn-primary btn-xs">Create new payset</a>
+                                    </div>
+                                </div>
+                                <div class="hr-line-dashed"></div>
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <div class="form-group">
+                                            <!-- Initially select first competency in first category -->
+                                            <label class="control-label" for="status">Select a payset:</label>&nbsp;&nbsp;<a href="payroll_payitems.html" class="btn-primary btn-xs">Create new payset</a>
 
-                                                    <div class="input-group">
-                                                        <select data-placeholder="Choose a pay item..." class="chosen-select input-sm form-control" tabindex="2">
-                                                            <option selected value="1">STD - Standard Payset</option>
-                                                            <option value="2">FRL - Freelance Payset</option>
-                                                            <option value="3">PRT - Part-timer payset</option>
-                                                        </select>
-                                                    </div>
-
-                                                </div>
-
+                                            <div class="input-group">
+                                                <select data-placeholder="Choose a pay item..." class="chosen-select input-sm form-control" tabindex="2">
+                                                    <option selected value="1">STD - Standard Payset</option>
+                                                    <option value="2">FRL - Freelance Payset</option>
+                                                    <option value="3">PRT - Part-timer payset</option>
+                                                </select>
                                             </div>
 
                                         </div>
 
-                                        <div class="row">
-                                            <div class="col-sm-8">
-                                                Description: In a nisi quis nunc fermentum volutpat in sed dolor. Phasellus mollis dui at mauris iaculis tristique.
+                                    </div>
+
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        Description: In a nisi quis nunc fermentum volutpat in sed dolor. Phasellus mollis dui at mauris iaculis tristique.
+                                    </div>
+                                </div>
+
+
+                                <div class="hr-line-dashed"></div>
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <div class="form-group">
+                                            <!-- Initially select first competency in first category -->
+                                            <label class="control-label" for="status">Select a payslip:</label>&nbsp;&nbsp;<a href="payroll_payitems.html" class="btn-primary btn-xs">Create new payslip</a>
+
+                                            <div class="input-group">
+                                                <select data-placeholder="Choose a pay item..." class="chosen-select input-sm form-control" tabindex="2">
+                                                    <option selected value="1">STD - Standard Payset</option>
+                                                    <option value="2">FRL - Freelance Payset</option>
+                                                    <option value="3">PRT - Part-timer payset</option>
+                                                </select>
                                             </div>
+
                                         </div>
 
+                                    </div>
 
-                                        <div class="hr-line-dashed"></div>
-                                        <div class="row">
-                                            <div class="col-sm-8">
-                                                <div class="form-group">
-                                                    <!-- Initially select first competency in first category -->
-                                                    <label class="control-label" for="status">Select a payslip:</label>&nbsp;&nbsp;<a href="payroll_payitems.html" class="btn-primary btn-xs">Create new payslip</a>
+                                </div>
 
-                                                    <div class="input-group">
-                                                        <select data-placeholder="Choose a pay item..." class="chosen-select input-sm form-control" tabindex="2">
-                                                            <option selected value="1">STD - Standard Payset</option>
-                                                            <option value="2">FRL - Freelance Payset</option>
-                                                            <option value="3">PRT - Part-timer payset</option>
-                                                        </select>
-                                                    </div>
-
-                                                </div>
-
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        Description: Phasellus condimentum mollis diam, quis pharetra velit laoreet vitae.
+                                    </div>
+                                </div>
+                                <div class="hr-line-dashed"></div>
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <div class="form-group">
+                                            <div class="i-checks">
+                                                <label>
+                                                    <input type="checkbox" value=""> <i></i>Salary entered is take-home pay</label>
                                             </div>
 
                                         </div>
 
-                                        <div class="row">
-                                            <div class="col-sm-8">
-                                                Description: Phasellus condimentum mollis diam, quis pharetra velit laoreet vitae.
-                                            </div>
-                                        </div>
-                                        <div class="hr-line-dashed"></div>
+                                    </div>
 
-                                        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                </div>
+                                <div class="hr-line-dashed"></div>
+
+                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save</button>
+
+
+                            </div>
+
+                        </div>
+                        <div class="modal fade" id="modal_mf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <textarea class="form-control" rows="6"></textarea>
+                                    </div>
+                                    <div class="modal-footer">
                                         <button type="button" class="btn btn-primary">Save</button>
-
-
-                                    </div>
-
-                                </div>
-
-
-                            </div>
-                            <div class="modal fade" id="modal_mf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            <textarea class="form-control" rows="6"></textarea>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-primary">Save</button>
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                        </div>
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
-                            <div class="footer">
-                                <div class="pull-right">
-                                    <strong>Version</strong> 2.x.xxxx.
-                                </div>
-                                <div>
-                                    <strong>Copyright</strong> Netika Indonesia &copy; 2016
-                                </div>
+                        </div>
+                        <div class="footer">
+                            <div class="pull-right">
+                                <strong>Version</strong> 2.x.xxxx.
+                            </div>
+                            <div>
+                                <strong>Copyright</strong> Netika Indonesia &copy; 2016
                             </div>
                         </div>
                     </div>
